...
    DialogHelper.showStatefulDialog(
      context: context,
      builder: (context, setState) {
        var selectedValue = context.read<LanguageCubit>().state.value;
        return DialogHelper.buildDialog(
          context: context,
          title: Text(context.localization.change_language),
          content: DropdownButton<String>(
            value: selectedValue,
            items: [
              ...['vi', 'en'].map(
                (e) => DropdownMenuItem(
                  value: e,
...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(context.localization.title),
        actions: [
          IconButton(
            key: const Key('search_button'),
            onPressed: () => _onSearch(context),
            icon: const Icon(Symbols.search),
          ),
          CategoryFilter(),
          IconButton(
            onPressed: () => _onSetting(context),
...
