...
          decoration: BoxDecoration(
            color: Colors.white,
            borderRadius: BorderRadius.circular(5.0),
          ),
          child: Center(
            child: SearchWidget(
              key: const Key('search_widget'),
              controller: _searchController,
              onSearch: _onSearch,
            ),
          ),
        ),
      ),
...
